--- a/index.html
+++ b/index.html
@@ -645,6 +645,129 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Member -->
+            <section class="member">
+                <div class="main-container">
+                    <div class="member__inner">
+                        <p class="member__label service__label">
+                            Pet Care Staff
+                        </p>
+
+                        <h2 class="section-heading heading-lv2 member__heading">
+                            Meet Our Groomers
+                        </h2>
+
+                        <div class="member__list">
+                            <div class="member__item">
+                                <figure
+                                    class="member__item__avatar-wrap-1 member__section-avatar-wrap"
+                                >
+                                    <img
+                                        src="./assets/img/member-1.png"
+                                        alt="Meghan Samit"
+                                        class="member__item__avatar"
+                                    />
+
+                                    <img
+                                        class="member__item__section-icon member__item__icon-1"
+                                        src="./assets/icons/member-avatar-icon-1.svg"
+                                        alt="decor"
+                                    />
+                                </figure>
+
+                                <p class="member__item__desc">Pet Trainer</p>
+
+                                <h3 class="member__item__name section-heading">
+                                    Meghan Samit
+                                </h3>
+                            </div>
+
+                            <div class="member__item">
+                                <figure
+                                    class="member__item__avatar-wrap-2 member__section-avatar-wrap"
+                                >
+                                    <img
+                                        src="./assets/img/member-2.png"
+                                        alt="Alissa Silva"
+                                        class="member__item__avatar"
+                                    />
+
+                                    <img
+                                        class="member__item__section-icon member__item__icon-2"
+                                        src="./assets/icons/member-avatar-icon-2.svg"
+                                        alt="decor"
+                                    />
+                                </figure>
+
+                                <p class="member__item__desc">Veterinarian</p>
+
+                                <h3 class="member__item__name section-heading">
+                                    Alissa Silva
+                                </h3>
+                            </div>
+
+                            <div class="member__item">
+                                <figure
+                                    class="member__item__avatar-wrap-3 member__section-avatar-wrap"
+                                >
+                                    <img
+                                        src="./assets/img/member-3.png"
+                                        alt="Cindy Harris"
+                                        class="member__item__avatar"
+                                    />
+
+                                    <img
+                                        class="member__item__section-icon member__item__icon-1"
+                                        src="./assets/icons/member-avatar-icon-3.svg"
+                                        alt="decor"
+                                    />
+                                </figure>
+
+                                <p class="member__item__desc">Veterinarian</p>
+
+                                <h3 class="member__item__name section-heading">
+                                    Cindy Harris
+                                </h3>
+                            </div>
+
+                            <div class="member__item">
+                                <figure
+                                    class="member__item__avatar-wrap-4 member__section-avatar-wrap"
+                                >
+                                    <img
+                                        src="./assets/img/member-4.png"
+                                        alt="Lucas Tony"
+                                        class="member__item__avatar"
+                                    />
+
+                                    <img
+                                        class="member__item__section-icon member__item__icon-2"
+                                        src="./assets/icons/member-avatar-icon-4.svg"
+                                        alt="decor"
+                                    />
+                                </figure>
+
+                                <p class="member__item__desc">
+                                    Animal Caretaker
+                                </p>
+
+                                <p class="member__item__name section-heading">
+                                    Lucas Tony
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="member__action">
+                            <a
+                                href="#!"
+                                class="member__action__link service__btn btn"
+                                >View All Team</a
+                            >
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
